# test_naver

./: .gitignore  README.md  pyproject.toml  request.md  requirements.txt  restart.ps1  restart.sh  vercel.json
api/: index.py
backend/: .env.example  __init__.py  analyzer.py  journalist_insights.py  main.py  requirements.txt
docs/: openai-hybrid-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AdvancedDashboard.tsx  GeneralDashboard.tsx  JournalistInsights.tsx  NewsList.tsx  SearchBox.tsx
frontend/src/components/ui/: button.tsx
frontend/src/types/: api.ts
